[tool.poetry]
name = "app"
version = "0.1.0"
description = "Multitenant Hospital Management System"
authors = ["Kishalay Kundu <kishalay.kundu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112"}
SqlAlchemy = "^2.0"
psycopg = {extras = ["c"], version = "^3.2"}
psycopg-pool = "^3.2"
argon2-cffi = "^23"
pyjwt = "^2.8.0"
jinja2 = "^3.1.4"
pyotp = "^2.9"
qrcode = "^7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.2"
ruff = "^0.6.2"
pre-commit = "^3.8.0"
coverage = "^7.6.1"

[build-system]
requires = ["poetry>=1.8.3"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py312"
